--- a/app/views/parents/_rewards.html.erb
+++ b/app/views/parents/_rewards.html.erb
@@ -1,7 +1,7 @@
 <div class='add-feature'>
     <%= cl_image_tag 'pinwheel', height: 50, width: 50, class: "dashboard-icon"%>
     <h4> Reward</h4>
-    <%= cl_image_tag 'plus', height: 30, width: 30,class: "test btn-add-object" %>
+    <%= cl_image_tag 'plus_1', height: 30, width: 30,class: "test btn-add-object" %>
 </div>
 <div>
     <!-- The Modal -->
