--- a/app/views/parents/_tasks.html.erb
+++ b/app/views/parents/_tasks.html.erb
@@ -3,7 +3,7 @@
 
   <%= cl_image_tag 'watering-can',  height: 50, width: 50, class: "dashboard-icon"%>
   <h4>Task</h4>
-  <%= cl_image_tag 'plus', height: 30, width: 30,class: "test btn-add-object" %>
+  <%= cl_image_tag 'plus_1', height: 30, width: 30,class: "test btn-add-object" %>
 </div>
 <div>
     <!-- Trigger/Open The Modal -->
