--- a/app/views/parents/_children.html.erb
+++ b/app/views/parents/_children.html.erb
@@ -1,9 +1,18 @@
-
-    <% current_parent.children.each do |child| %>
+<% current_parent.children.each do |c| %>
     <div class="each-child">
-        <h3 class="child-name" data-id="<%= child.id %>"><%= child.name %></h3>
-        <div class="task-group hidden" data-id="<%= child.id %>">
-        <% if child.rewards.any? %> <!-- no wishlist display if no reward -->
+        <h4 class="child-name" data-id="<%= c.id %>"><%= c.name %></h4>
+    </div>
+<% end %>
+
+<div id="welcome-content">
+  <h4><strong>Hello! Have you ...... the beans today?</strong></h4>
+  <div><%= image_tag 'two-pots', width: 500%></div>
+</div>
+
+<% current_parent.children.each do |child| %>
+    <div class="task-group hidden" data-id="<%= child.id %>">
+        <% if child.rewards.any? %>
+        <!-- no wishlist display if no reward -->
         <h5>Wishlist:</h5>
         <div class="child-wishlist">
             <% child.daily_rewards.each do |reward| %>
@@ -18,13 +27,13 @@
                 <% if req.state == 0 %>
                 <div id="<%= child.name.strip %>-<%= req.reward.name.strip.split.join %>-actions">
                     <span>
-                            <%= link_to reward_reward_request_path(req.reward, req, approved: true),
-                            remote: true, method: :patch do %><%= icon('fas', 'check') %>Grant<% end %>
-                          </span>
+                                <%= link_to reward_reward_request_path(req.reward, req, approved: true),
+                                remote: true, method: :patch do %><%= icon('fas', 'check') %>Grant<% end %>
+                              </span>
                     <span>
-                            <%= link_to reward_reward_request_path(req.reward, req, approved: false),
-                            remote: true, method: :patch do %><%= icon('fas', 'times') %> Say No<% end %>
-                          </span>
+                                <%= link_to reward_reward_request_path(req.reward, req, approved: false),
+                                remote: true, method: :patch do %><%= icon('fas', 'times') %> Say No<% end %>
+                              </span>
                 </div>
                 <% else %>
                 <div id="request-state">
@@ -36,42 +45,39 @@
             </div>
             <% end %>
         </div>
-        <% end %> <!-- end of if child.rewards.any? -->
-
-
+        <% end %>
+        <!-- end of if child.rewards.any? -->
         <div>
             <div class="row">
-              <% if child.tasks.any? %>
-                  <% child.tasks.each do |task| %>
-                      <div class="col-sm-3 col-xs-6 each-task">
-
-                          <div class="dashboard-task-name" data-id="<%= task.id %>">
-                              <p>
-                                  <%= task.objective.capitalize %>
-                              </p>
-                              <!-- indication of lask task submission state -->
-                              <!-- change to colored border later!!! -->
-                              <% unless task.task_submissions.blank? %>
-
-                                  <% if task.task_submissions.last.state == 1 %>
-                                    <%= icon('fas', 'check') %>
-                                    <%#= cl_image_tag 'checked_2' %>
-                                  <% elsif task.task_submissions.last.state == 0 %>
-                                    <%= icon('fas', 'hourglass-start') %>
-                                  <%#= cl_image_tag 'hourglass', height:32, width:32 %>
-                                  <% else %>
-                                    <%= icon('fas', 'times') %>
-                                    <%#= cl_image_tag 'error_2' %>
-                                  <%end %>
-                              <%end %>
-                              <!-- end of indication -->
-                          </div>
-
-                      </div>
-                  <% end %>
-              <% else %>
-                  <div class="container"><h5>No tasks yet! </h5></div>
-              <% end %>
+                <% if child.tasks.any? %>
+                <% child.tasks.each do |task| %>
+                <div class="col-sm-3 col-xs-6 each-task">
+                    <div class="dashboard-task-name" data-id="<%= task.id %>">
+                        <p>
+                            <%= task.objective.capitalize %>
+                        </p>
+                        <!-- indication of lask task submission state -->
+                        <!-- change to colored border later!!! -->
+                        <% unless task.task_submissions.blank? %>
+                        <% if task.task_submissions.last.state == 1 %>
+                        <%= icon('fas', 'check') %>
+                        <%#= cl_image_tag 'checked_2' %>
+                        <% elsif task.task_submissions.last.state == 0 %>
+                        <%= icon('fas', 'hourglass-start') %>
+                        <%#= cl_image_tag 'hourglass', height:32, width:32 %>
+                        <% else %>
+                        <%= icon('fas', 'times') %>
+                        <%#= cl_image_tag 'error_2' %>
+                        <%end %>
+                        <%end %>
+                        <!-- end of indication -->
+                    </div>
+                </div>
+                <% end %>
+                <% else %>
+                <div class="container"><h5>No tasks yet! </h5>
+                </div>
+                <% end %>
             </div>
             <div class="row">
                 <% child.tasks.each do |task| %>
@@ -85,32 +91,33 @@
                     <div>
                         <div class="submission-details">
                             <% unless submission.comment.strip.empty? %>
-                                <strong>Message:</strong>
-                                <p><%= submission.comment %></p>
+                            <strong>Message:</strong>
+                            <p>
+                                <%= submission.comment %>
+                            </p>
                             <% end %>
                             <% unless submission.photo.to_s.empty? %>
-                                <%= cl_image_tag submission.photo, height: 300, width: 400, crop: :fill %>
+                            <%= cl_image_tag submission.photo, height: 300, width: 400, crop: :fill %>
                             <% end %>
                         </div>
                         <!------------- AJAX task submission ---------->
                         <% if submission.state == 0 %>
-                            <div id="<%= task.objective.strip.split.join %>submission-actions">
-                                <span><%= link_to task_task_submission_path(task, submission, approved: true), remote: true, method: :patch do %><%= icon('fas', 'check') %> Approve<% end %></span>
-                                <span><%= link_to task_task_submission_path(task, submission, approved: false), remote: true, method: :patch do %><%= icon('fas', 'times') %> Disapprove<% end %></span>
-                            </div>
-                            <hr>
+                        <div id="<%= task.objective.strip.split.join %>submission-actions">
+                            <span><%= link_to task_task_submission_path(task, submission, approved: true), remote: true, method: :patch do %><%= icon('fas', 'check') %> Approve<% end %></span>
+                            <span><%= link_to task_task_submission_path(task, submission, approved: false), remote: true, method: :patch do %><%= icon('fas', 'times') %> Disapprove<% end %></span>
+                        </div>
+                        <hr>
                         <% else %>
-                              <div id="submission-state">
-                                  <%  if submission.state > 0  %>
-                                  Last submission: Approved
-                                  <%  else %>
-                                  Last submission: Rejected
-                                  <%  end %>
-                              </div>
-                              <hr>
+                        <div id="submission-state">
+                            <%  if submission.state > 0  %>
+                            Last submission: Approved
+                            <%  else %>
+                            Last submission: Rejected
+                            <%  end %>
+                        </div>
+                        <hr>
                         <% end %>
                         <!------------------------------------------>
-
                     </div>
                     <% end %>
                     <% end %>
@@ -119,6 +126,5 @@
                 <% end %>
             </div>
         </div>
-      </div>
     </div>
-    <% end %>
+<% end %>
