edited welcome message

--- a/app/views/parents/_children.html.erb
+++ b/app/views/parents/_children.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <div id="welcome-content">
-  <h4><strong>Hello! Have you ...... the beans today?</strong></h4>
+  <h4><strong>Hello <%= current_parent.name %>, how are the beans doing today? </strong></h4>
   <div><%= image_tag 'two-pots', width: 500%></div>
 </div>
 
