--- a/app/views/children/_rewards.html.erb
+++ b/app/views/children/_rewards.html.erb
@@ -10,7 +10,7 @@
               <% if reward.reward_requests.last.state == 0 %>
                 <%#= reward.name %>
                 <%= cl_image_tag "#{reward.tag}", height: 50 %>
-                <span class="pending"> pending</span>
+                <div class="pending">Pending</div>
 
               <% elsif !reward.claimed %>
 
@@ -24,7 +24,7 @@
               <% else %>
                 <%#= reward.name %>
                 <%= cl_image_tag "#{reward.tag}", height: 50 %>
-                <span class="claimed"> Claimed!</span>
+                <div class="claimed"> Claimed!</div>
               <% end %>
 
               <div id="<%= current_child.name.strip %>-<%= reward.name.strip.split.join %>-request-state" style="color: #5D5A75;"></div>
