--- a/app/views/children/playground.html.erb
+++ b/app/views/children/playground.html.erb
@@ -3,7 +3,7 @@
         <div class="todays-quests">
           <div class="text-center">
             <h2 style="font-weight: 700; color: white;">Welcome back <%= current_child.name %></h2>
-            <h5 id="points-left"><%= current_child.point %> points <span><%= icon('fas', 'bomb') %></span></h5>
+            <h5 id="points-left" style="color: white; font-weight:bold; font-size: 22px;"><%= current_child.point %> points <span><%= icon('fas', 'bomb') %></span></h5>
             <%= render 'rewards' %>
             <hr>
             </div>
