--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,11 +8,14 @@
       <h2>Sign up as a parent</h2>
       <br>
       <div class="form-inputs">
+        <%= f.input :name,
+                    required: true,
+                    autofocus: true
+                    %>
         <%= f.input :email,
                     required: true,
                     autofocus: true ,
                     input_html: { autocomplete: "email" }%>
-
         <%= f.input :password,
                     required: true,
                     hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
