fixed modal close button click problem

--- a/app/views/parents/_add_child.html.erb
+++ b/app/views/parents/_add_child.html.erb
@@ -7,7 +7,7 @@
     <div class="modal">
 
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="modal-close">&times;</span>
             <%= simple_form_for @child, url: add_child_path do |f| %>
             <%= f.input :name,
                 required: true,
