--- a/app/assets/stylesheets/pages/_modal.scss
+++ b/app/assets/stylesheets/pages/_modal.scss
@@ -27,7 +27,7 @@
 }
 
 /* The Close Button */
-.close {
+.close, .modal-close {
     color: #aaa;
     float: right;
     font-size: 28px;
@@ -35,7 +35,9 @@
 }
 
 .close:hover,
-.close:focus {
+.close:focus,
+.modal-close:hover,
+.modal-close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
