--- a/app/views/parents/_rewards.html.erb
+++ b/app/views/parents/_rewards.html.erb
@@ -8,7 +8,7 @@
     <div class="modal">
         <!-- Modal content -->
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="modal-close">&times;</span>
             <%= simple_form_for [@reward] do |f| %>
             <%= f.input :name , label: 'Reward'%>
             <%= f.input :category, collection: %w[Gaming Entertainment Outdoor Allowance Tablet Event Other] %>
