--- a/app/views/parents/_tasks.html.erb
+++ b/app/views/parents/_tasks.html.erb
@@ -11,7 +11,7 @@
     <div class="modal">
         <!-- Modal content -->
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="modal-close">&times;</span>
             <%= simple_form_for @task do |f| %>
             <%= f.input :objective, label: 'Chore Name' %>
             <%= f.input :key_results, label: 'Instructions' %>
